--- a/rooms/roomballot/static/css/bootstrap.css
+++ b/rooms/roomballot/static/css/bootstrap.css
@@ -5080,18 +5080,18 @@ input[type="button"].btn-block {
 
 .list-group-item-action {
   width: 100%;
-  color: #495057;
+  color: #990066;
   text-align: inherit;
 }
 
 .list-group-item-action:hover, .list-group-item-action:focus {
-  color: #495057;
+  color: #990066;
   text-decoration: none;
   background-color: #f8f9fa;
 }
 
 .list-group-item-action:active {
-  color: #212529;
+  color: #990066;
   background-color: #e9ecef;
 }
 
@@ -5102,6 +5102,7 @@ input[type="button"].btn-block {
   margin-bottom: -1px;
   background-color: #fff;
   border: 1px solid rgba(0, 0, 0, 0.125);
+  color: #6c757d;
 }
 
 .list-group-item:first-child {
@@ -5118,6 +5119,7 @@ input[type="button"].btn-block {
 .list-group-item:hover, .list-group-item:focus {
   z-index: 1;
   text-decoration: none;
+  color: #990066;
 }
 
 .list-group-item.disabled, .list-group-item:disabled {
@@ -5128,8 +5130,8 @@ input[type="button"].btn-block {
 .list-group-item.active {
   z-index: 2;
   color: #fff;
-  background-color: #007bff;
-  border-color: #007bff;
+  background-color: #990066;
+  border-color: #990066;
 }
 
 .list-group-flush .list-group-item {
@@ -5147,7 +5149,7 @@ input[type="button"].btn-block {
 }
 
 .list-group-item-primary {
-  color: #004085;
+  color: #990066;
   background-color: #b8daff;
 }
 
@@ -5158,7 +5160,7 @@ input[type="button"].btn-block {
 
 .list-group-item-primary.list-group-item-action.active {
   color: #fff;
-  background-color: #004085;
+  background-color: #990066;
   border-color: #004085;
 }
 
@@ -5190,7 +5192,7 @@ input[type="button"].btn-block {
 
 .list-group-item-success.list-group-item-action.active {
   color: #fff;
-  background-color: #155724;
+  background-color: #990066;
   border-color: #155724;
 }
 
