--- a/rooms/roomballot/templates/roomballot/status.html
+++ b/rooms/roomballot/templates/roomballot/status.html
@@ -17,168 +17,168 @@
 </head>
 <body>
 
-<nav class="navbar navbar-expand-lg navbar-dark justify-content-between mb-4">
-
+<nav class="navbar navbar-dark justify-content-between mb-4">
     <a class="navbar-brand" href="/roomballot/admin">
-        <img src="https://www.jcr.dow.cam.ac.uk/storage/app/media/dowjcrwhite.png" width="60"
-             style="padding-right: 10px">
-        Room Balloting System
+        Downing JCR RBS<br>
+        <p class="small">Administration Portal</p>
     </a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent">
-        <span class="navbar-toggler-icon"></span>
-    </button>
-
-    <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
-        <ul class="nav navbar-nav">
-            <li class="mr-sm-2"><a class="nav-link" href="/roomballot/admin">Admin Dashboard</a></li>
-        </ul>
-    </div>
 </nav>
 
-<div class="container">
-
-    <div class="border-bottom">
-        <div class="row">
-            <div class="col-lg-9 col-md-12 col-sm-12 col-xs-12">
-                <h2>Status</h2>
-            </div>
-        </div>
-    </div>
+<div class="container-fluid">
 
     <div class="row mb-5">
 
-        <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 mt-4">
-                <div class="ui-widget mb-3" id="student-search-widget">
-                    <table>
-                        <tr>
-                            <td>
-                                {% if syndicates_complete %}
-                                    Yes
-                                {% else %}
-                                    No
-                                {% endif %}
-                            </td>
-                            <td>First Year Syndicates Complete</td>
-                        </tr>
-                        <tr>
-                            <td>
-                                {% if randomised %}
-                                    Yes
-                                {% else %}
-                                    No
-                                {% endif %}
-                            </td>
-                            <td>Randomised</td>
-                        </tr>
-                        <tr>
-                            <td>
-                                {% if in_progress %}
-                                    Yes
-                                {% else %}
-                                    No
-                                {% endif %}</td>
-                            <td>Ballot In Progress</td>
-                        </tr>
-                    </table>
+        <nav class="col-md-2 d-none d-md-block sidebar" id="navbarSupportedContent">
+            <div class="list-group">
+                <a href="/roomballot/admin" class="list-group-item"><i class="fa fa-key"></i> <span>Dashboard</span></a>
+                <a href="#" class="list-group-item active"><i class="fa fa-credit-card"></i> <span>Status</span></a>
+                <a href="syndicates" class="list-group-item"><i class="fa fa-question-circle"></i> <span>Syndicates</span></a>
+                <a href="#" class="list-group-item"><i class="fa fa-arrow-circle-o-left"></i>
+                    <span>Students</span></a>
+            </div>
+        </nav>
+
+
+        <main role="main" class="col md-9 ml-sm-auto col-lg-10 px-4">
+            <div class="row">
+
+                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 mt-1">
+                    <div class="ui-widget mb-3" id="student-search-widget">
+                        <table>
+                            <tr>
+                                <td>
+                                    {% if syndicates_complete %}
+                                        Yes
+                                    {% else %}
+                                        No
+                                    {% endif %}
+                                </td>
+                                <td>First Year Syndicates Complete</td>
+                            </tr>
+                            <tr>
+                                <td>
+                                    {% if randomised %}
+                                        Yes
+                                    {% else %}
+                                        No
+                                    {% endif %}
+                                </td>
+                                <td>Randomised</td>
+                            </tr>
+                            <tr>
+                                <td>
+                                    {% if in_progress %}
+                                        Yes
+                                    {% else %}
+                                        No
+                                    {% endif %}</td>
+                                <td>Ballot In Progress</td>
+                            </tr>
+                        </table>
+                    </div>
                 </div>
-        </div>
 
-        {% if incomplete_students %}
-        <div class="col-md-12">
-            <hr size="5px" color="" noshade />
-        </div>
-        <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 mt-4">
-            <h3>Incomplete Students</h3>
-            <p>The following students have not completed the syndicate creation process.</p>
-            <table class="table table-bordered table-hover">
-                <thead>
-                <tr>
-                    <th scope="col">Name</th>
-                    <th scope="col" class="d-none d-sm-table-cell">CRSid</th>
-                    <th scope="col">Issue</th>
-                    <th scope="col"></th>
-                </tr>
-                </thead>
-                <tbody>
-                {% for student in incomplete_students %}
-                <tr class="alert-danger">
-                    <td>{{ student.first_name }} {{ student.surname }}</td>
-                    <td class="d-none d-sm-table-cell">{{ student.user_id }}</td>
-                    <td>{% if student.syndicate == None %}Not part of a syndicate
-                        {% elif not student.accepted_syndicate %}Not accepted syndicate
-                        {% elif not student.syndicate.complete %}Syndicate Incomplete
-                        {% endif %}</td>
-                    <td class="text-center">
-                        <a class="btn btn-primary" href="manage-student/{{ student.user_id }}">Manage</a>
-                    </td>
-                </tr>
-                {% endfor %}
-                </tbody>
-            </table>
-        </div>
-        {% endif %}
+                {% if incomplete_students %}
+                    <div class="col-md-12">
+                        <hr size="5px" color="" noshade/>
+                    </div>
+                    <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 mt-4">
+                        <h3>Incomplete Students</h3>
+                        <p>The following students have not completed the syndicate creation process.</p>
+                        <table class="table table-bordered table-hover">
+                            <thead>
+                            <tr>
+                                <th scope="col">Name</th>
+                                <th scope="col" class="d-none d-sm-table-cell">CRSid</th>
+                                <th scope="col">Issue</th>
+                                <th scope="col"></th>
+                            </tr>
+                            </thead>
+                            <tbody>
+                            {% for student in incomplete_students %}
+                                <tr class="alert-danger">
+                                    <td>{{ student.first_name }} {{ student.surname }}</td>
+                                    <td class="d-none d-sm-table-cell">{{ student.user_id }}</td>
+                                    <td>{% if student.syndicate == None %}Not part of a syndicate
+                                    {% elif not student.accepted_syndicate %}Not accepted syndicate
+                                    {% elif not student.syndicate.complete %}Syndicate Incomplete
+                                    {% endif %}</td>
+                                    <td class="text-center">
+                                        <a class="btn btn-primary"
+                                           href="manage-student/{{ student.user_id }}">Manage</a>
+                                    </td>
+                                </tr>
+                            {% endfor %}
+                            </tbody>
+                        </table>
+                    </div>
+                {% endif %}
 
-        {% if students_outside_ballot %}
-        <div class="col-md-12">
-            <hr size="5px" color="" noshade />
-        </div>
-        <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 mt-4">
-            <h3>Outside Ballot</h3>
-            <p>The following students have been removed from the ballot.</p>
-            <table class="table table-bordered table-hover table-striped">
-                <thead>
-                <tr>
-                    <th scope="col">Name</th>
-                    <th scope="col" class="d-none d-sm-table-cell">CRSid</th>
-                    <th scope="col">Room Allocated?</th>
-                    <th scope="col"></th>
-                </tr>
-                </thead>
-                <tbody>
-                {% for student in students_outside_ballot %}
-                <tr>
-                    <td>{{ student.first_name }} {{ student.surname }}</td>
-                    <td class="d-none d-sm-table-cell">{{ student.user_id }}</td>
-                    <td>{% if student.has_allocated %}Yes{% else %}No{% endif %}</td>
-                    <td class="text-center">
-                        <a class="btn btn-primary" href="manage-student/{{ student.user_id }}">Manage</a>
-                    </td>
-                </tr>
-                {% endfor %}
-                </tbody>
-            </table>
-        </div>
-        {% endif %}
+                {% if students_outside_ballot %}
+                    <div class="col-md-12">
+                        <hr size="5px" color="" noshade/>
+                    </div>
+                    <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 mt-4">
+                        <h3>Outside Ballot</h3>
+                        <p>The following students have been removed from the ballot.</p>
+                        <table class="table table-bordered table-hover table-striped">
+                            <thead>
+                            <tr>
+                                <th scope="col">Name</th>
+                                <th scope="col" class="d-none d-sm-table-cell">CRSid</th>
+                                <th scope="col">Room Allocated?</th>
+                                <th scope="col"></th>
+                            </tr>
+                            </thead>
+                            <tbody>
+                            {% for student in students_outside_ballot %}
+                                <tr>
+                                    <td>{{ student.first_name }} {{ student.surname }}</td>
+                                    <td class="d-none d-sm-table-cell">{{ student.user_id }}</td>
+                                    <td>{% if student.has_allocated %}Yes{% else %}No{% endif %}</td>
+                                    <td class="text-center">
+                                        <a class="btn btn-primary"
+                                           href="manage-student/{{ student.user_id }}">Manage</a>
+                                    </td>
+                                </tr>
+                            {% endfor %}
+                            </tbody>
+                        </table>
+                    </div>
+                {% endif %}
 
-        {% if incomplete_syndicates %}
-        <div class="col-md-12">
-            <hr size="5px" color="" noshade />
-        </div>
-        <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 mt-4">
-            <h3>Incomplete Syndicates</h3>
-            <p>The following syndicates are currently incomplete.</p>
-            <table class="table table-bordered table-hover table-striped">
-                <thead>
-                <tr>
-                    <th scope="col">Syndicate ID</th>
-                    <th scope="col">Owner</th>
-                    <th scope="col"></th>
-                </tr>
-                </thead>
-                <tbody>
-                {% for syndicate in incomplete_syndicates %}
-                <tr>
-                    <td>{{ syndicate.syndicate_id }}</td>
-                    <td>{{ syndicate.owner_id }}</td>
-                    <td class="text-center">
-                        <a class="btn btn-primary" href="syndicate/{{ syndicate.syndicate_id }}">Manage</a>
-                    </td>
-                </tr>
-                {% endfor %}
-                </tbody>
-            </table>
-        </div>
-        {% endif %}
+                {% if incomplete_syndicates %}
+                    <div class="col-md-12">
+                        <hr size="5px" color="" noshade/>
+                    </div>
+                    <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 mt-4">
+                        <h3>Incomplete Syndicates</h3>
+                        <p>The following syndicates are currently incomplete.</p>
+                        <table class="table table-bordered table-hover table-striped">
+                            <thead>
+                            <tr>
+                                <th scope="col">Syndicate ID</th>
+                                <th scope="col">Owner</th>
+                                <th scope="col"></th>
+                            </tr>
+                            </thead>
+                            <tbody>
+                            {% for syndicate in incomplete_syndicates %}
+                                <tr>
+                                    <td>{{ syndicate.syndicate_id }}</td>
+                                    <td>{{ syndicate.owner_id }}</td>
+                                    <td class="text-center">
+                                        <a class="btn btn-primary"
+                                           href="syndicate/{{ syndicate.syndicate_id }}">Manage</a>
+                                    </td>
+                                </tr>
+                            {% endfor %}
+                            </tbody>
+                        </table>
+                    </div>
+                {% endif %}
+            </div>
+        </main>
     </div>
 </div>
 
