--- a/rooms/roomballot/templates/roomballot/syndicate-list.html
+++ b/rooms/roomballot/templates/roomballot/syndicate-list.html
@@ -17,63 +17,60 @@
 </head>
 <body>
 
-<nav class="navbar navbar-expand-lg navbar-dark justify-content-between mb-4">
-
+<nav class="navbar navbar-dark justify-content-between mb-4">
     <a class="navbar-brand" href="/roomballot/admin">
-        <img src="https://www.jcr.dow.cam.ac.uk/storage/app/media/dowjcrwhite.png" width="60"
-             style="padding-right: 10px">
-        Room Balloting System
+        Downing JCR RBS<br>
+        <p class="small">Administration Portal</p>
     </a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent">
-        <span class="navbar-toggler-icon"></span>
-    </button>
-
-    <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
-        <ul class="nav navbar-nav">
-            <li class="mr-sm-2"><a class="nav-link" href="/roomballot/admin">Admin Dashboard</a></li>
-        </ul>
-    </div>
 </nav>
 
-<div class="container">
-
-    <div class="border-bottom">
-        <div class="row">
-            <div class="col-lg-9 col-md-12 col-sm-12 col-xs-12">
-                <h2>Syndicates</h2>
-            </div>
-        </div>
-    </div>
+<div class="container-fluid">
 
     <div class="row mb-5">
 
-        <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 mt-4">
-            <table class="table table-bordered table-hover table-striped">
-                <thead>
-                <tr>
-                    <th scope="col">Syndicate ID</th>
-                    <th scope="col" class="d-none d-sm-table-cell">Owner</th>
-                    <th scope="col" class="d-none d-sm-table-cell">Year</th>
-                    <th scope="col">Complete?</th>
-                    <th scope="col"></th>
-                </tr>
-                </thead>
-                <tbody>
-                {% for syndicate in syndicates %}
-                <tr>
-                    <td>{{ syndicate.syndicate_id }}</td>
-                    <td class="d-none d-sm-table-cell">{{ syndicate.owner_id }}</td>
-                    <td class="d-none d-sm-table-cell">{% if syndicate.year == 1 %}First{% else %}Second{% endif %}</td>
-                    <td>{% if syndicate.complete %}Yes{% else %}No{% endif %}</td>
-                    <td class="text-center">
-                        <a class="btn btn-primary" href="syndicate/{{ syndicate.syndicate_id }}">Manage</a>
-                    </td>
-                </tr>
-                {% endfor %}
-                </tbody>
-            </table>
-        </div>
+        <nav class="col-md-2 d-none d-md-block sidebar" id="navbarSupportedContent">
+            <div class="list-group">
+                <a href="/roomballot/admin" class="list-group-item"><i class="fa fa-key"></i> <span>Dashboard</span></a>
+                <a href="status" class="list-group-item"><i class="fa fa-credit-card"></i> <span>Status</span></a>
+                <a href="#" class="list-group-item active"><i class="fa fa-question-circle"></i>
+                    <span>Syndicates</span></a>
+                <a href="#" class="list-group-item"><i class="fa fa-arrow-circle-o-left"></i>
+                    <span>Students</span></a>
+            </div>
+        </nav>
 
+        <main role="main" class="col md-9 ml-sm-auto col-lg-10 px-4">
+            <div class="row">
+
+                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 mt-4">
+                    <table class="table table-bordered table-hover table-striped">
+                        <thead>
+                        <tr>
+                            <th scope="col">Syndicate ID</th>
+                            <th scope="col" class="d-none d-sm-table-cell">Owner</th>
+                            <th scope="col" class="d-none d-sm-table-cell">Year</th>
+                            <th scope="col">Complete?</th>
+                            <th scope="col"></th>
+                        </tr>
+                        </thead>
+                        <tbody>
+                        {% for syndicate in syndicates %}
+                            <tr>
+                                <td>{{ syndicate.syndicate_id }}</td>
+                                <td class="d-none d-sm-table-cell">{{ syndicate.owner_id }}</td>
+                                <td class="d-none d-sm-table-cell">{% if syndicate.year == 1 %}First{% else %}
+                                    Second{% endif %}</td>
+                                <td>{% if syndicate.complete %}Yes{% else %}No{% endif %}</td>
+                                <td class="text-center">
+                                    <a class="btn btn-primary" href="syndicate/{{ syndicate.syndicate_id }}">Manage</a>
+                                </td>
+                            </tr>
+                        {% endfor %}
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+        </main>
     </div>
 </div>
 
