Added support for room images

--- a/rooms/roomballot/templates/roomballot/room-detail-view.html
+++ b/rooms/roomballot/templates/roomballot/room-detail-view.html
@@ -77,9 +77,9 @@
     </div>
 
     <div class="row">
-        <div class="col-md-6">
+        <div class="col-md-6 mt-4">
             {% for i in images %}
-                <img src="{{ i }}" width="200px">
+                <img class="img-thumbnail mb-3" src="{{ i }}">
             {% endfor %}
         </div>
         <div class="col-md-6">
