--- a/rooms/roomballot/templates/roomballot/syndicate-list.html
+++ b/rooms/roomballot/templates/roomballot/syndicate-list.html
@@ -42,6 +42,7 @@
         <main role="main" class="col md-9 ml-sm-auto col-lg-10 px-4">
             <div class="row">
 
+                {% if syndicates %}
                 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 mt-4">
                     <table class="table table-bordered table-hover table-striped">
                         <thead>
@@ -69,6 +70,9 @@
                         </tbody>
                     </table>
                 </div>
+                {% else %}
+                    <h3 class="ml-2">No Syndicates</h3>
+                {% endif %}
             </div>
         </main>
     </div>
