--- a/rooms/roomballot/templates/roomballot/student-manage.html
+++ b/rooms/roomballot/templates/roomballot/student-manage.html
@@ -125,6 +125,11 @@
             $('#add-to-ballot').click(function () {
                 CreateButtonAjaxResponse(5);
             });
+
+            $('#accept-syndicate').click(function () {
+                CreateButtonAjaxResponse(6);
+            });
+
         });
 
     });
@@ -142,7 +147,7 @@
 
     <div class="row mt-4">
 
-        <nav class="col-md-2 d-none d-md-block sidebar" id="navbarSupportedContent">
+        <div class="col-md-2 col-sm-12 mb-5 d-md-block sidebar">
             <div class="list-group">
                 <a href="/roomballot/admin" class="list-group-item"><i class="fa fa-key"></i> <span>Dashboard</span></a>
                 <a href="../status" class="list-group-item"><i class="fa fa-credit-card"></i> <span>Status</span></a>
@@ -151,7 +156,7 @@
                 <a href="#" class="list-group-item"><i class="fa fa-arrow-circle-o-left"></i>
                     <span>Students</span></a>
             </div>
-        </nav>
+        </div>
         <main role="main" class="col md-9 ml-sm-auto col-lg-10 px-4">
             <div class="row">
                 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 mb-2">
@@ -170,6 +175,10 @@
                         <tr>
                             <td><b>CRSid</b></td>
                             <td>{{ student.user_id }}</td>
+                        </tr>
+                        <tr>
+                            <td><b>Ballot Year</b></td>
+                            <td>{% if student.year == 1 %}First{% else %}Second{% endif %}</td>
                         </tr>
                         <tr>
                             <td><b>In Ballot</b></td>
@@ -237,6 +246,10 @@
                                     <p>Start typing the syndicate ID below:</p>
                                     <input id="syndicate"><br>
                                 </div>
+                            {% else %}
+                                {% if not student.accepted_syndicate %}
+                                    <button class="btn btn-primary mb-3" id="accept-syndicate">Accept Syndicate</button><br>
+                                {% endif %}
                             {% endif %}
                         {% else %}
                             <button class="btn btn-primary mb-3" id="add-to-ballot">Add to Ballot</button><br>
