--- a/rooms/roomballot/templates/roomballot/staircase-view.html
+++ b/rooms/roomballot/templates/roomballot/staircase-view.html
@@ -98,9 +98,9 @@
             </table>
         </div>
         <div class="col-lg-3 col-md-12 col-sm-12 col-xs-12 mt-4">
-            <nav class="d-none d-md-block sidebar">
+            <div class="d-md-block">
             <div class="list-group">
-                <a href="#" class="list-group-item"><i class="fa fa-key"></i> <span>Floorplan</span></a>
+                <a href="{{ floorplan }}" class="list-group-item"><i class="fa fa-key"></i> <span>Floorplan</span></a>
                 <p class="list-group-item">
                     Let: {{ staircase.contract_length }} Weeks
                 </p>
@@ -108,7 +108,7 @@
                     Price Category: {{ staircase.price_category }}
                 </p>
             </div>
-        </nav>
+        </div>
         </div>
     </div>
 </div>
