--- a/rooms/roomballot/templates/roomballot/staircase-view.html
+++ b/rooms/roomballot/templates/roomballot/staircase-view.html
@@ -100,7 +100,7 @@
         <div class="col-lg-3 col-md-12 col-sm-12 col-xs-12 mt-4">
             <div class="d-md-block">
             <div class="list-group">
-                <a href="{{ floorplan }}" class="list-group-item"><i class="fa fa-key"></i> <span>Floorplan</span></a>
+                <a href="{{ floorplan.file.url }}" class="list-group-item"><i class="fa fa-key"></i> <span>Floorplan</span></a>
                 <p class="list-group-item">
                     Let: {{ staircase.contract_length }} Weeks
                 </p>
