--- a/rooms/roomballot/templates/roomballot/dashboard-student.html
+++ b/rooms/roomballot/templates/roomballot/dashboard-student.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE-edge">
     <meta name="viewport" content="width = device-width, initial-scale = 1">
     <title>Dashboard | Downing JCR RBS</title>
-    <link rel="stylesheet" href={% static 'css/bootstrap.css' %}>
+
     <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
     <link rel="stylesheet" href="https://code.jquery.com/ui/1.8.18/themes/base/jquery-ui.css" type="text/css"
           media="all"/>
@@ -14,22 +14,24 @@
     </script>
     <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.16/jquery-ui.min.js"
             type="text/javascript"></script>
+    <link rel="stylesheet" href={% static 'css/bootstrap.css' %}>
+
 
     <!--Start of Tawk.to Script-->
     <script type="text/javascript">
-    var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
-    Tawk_API.visitor = {
-        name : '{{ student.first_name }} ({{ request.user.username }})',
-        email : '{{ request.user.email }}'
+        var Tawk_API = Tawk_API || {}, Tawk_LoadStart = new Date();
+        Tawk_API.visitor = {
+            name: '{{ student.first_name }} ({{ request.user.username }})',
+            email: '{{ request.user.email }}'
         };
-    (function(){
-        var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
-        s1.async=true;
-        s1.src='https://embed.tawk.to/5b44b4b76d961556373d93d4/default';
-        s1.charset='UTF-8';
-        s1.setAttribute('crossorigin','*');
-        s0.parentNode.insertBefore(s1,s0);
-    })();
+        (function () {
+            var s1 = document.createElement("script"), s0 = document.getElementsByTagName("script")[0];
+            s1.async = true;
+            s1.src = 'https://embed.tawk.to/5b44b4b76d961556373d93d4/default';
+            s1.charset = 'UTF-8';
+            s1.setAttribute('crossorigin', '*');
+            s0.parentNode.insertBefore(s1, s0);
+        })();
     </script>
     <!--End of Tawk.to Script-->
 
@@ -43,23 +45,45 @@
              style="padding-right: 10px">
         Room Balloting System
     </a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent">
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
 
     <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
-        <ul class="nav navbar-nav">
-            <li class="mr-sm-2"><a class="nav-link active" href="/roomballot/dashboard">Dashboard</a></li>
+        <ul class="navbar-nav">
+            <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle d-none d-lg-block" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
+                   aria-haspopup="true" aria-expanded="false">
+                    {{ student }}
+                </a>
+                <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
+                    <a class="dropdown-item" href="/roomballot/dashboard">Dashboard</a>
+                    <a class="dropdown-item" href="/roomballot/staircases">Browse Rooms</a>
+                    <div class="dropdown-divider"></div>
+                    <a class="dropdown-item" href="/accounts/logout">Logout</a>
+                </div>
+                <li class="nav-item active">
+                    <a class="nav-link active d-lg-none d-xl-none" href="/roomballot/dashboard">Dashboard</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link d-lg-none d-xl-none" href="/roomballot/staircases">Browse Rooms</a>
+                </li>
+                <div class="dropdown-divider-burgundy"></div>
+                <li class="nav-item">
+                    <a class="nav-link d-lg-none d-xl-none" href="/accounts/logout">Logout</a>
+                </li>
+            </li>
         </ul>
     </div>
-</nav>
 
+</nav>
 
 <div class="container">
 
     <div class="border-bottom mb-3">
         <h2>Dashboard</h2>
-        <h5>Welcome, {{ student.first_name }} {{ student.surname }}</h5>
+        <h5>Welcome, {{ student.first_name }}</h5>
     </div>
 
     <div class="row">
@@ -67,15 +91,15 @@
             <div class="jumbotron">
                 <h3>Your Room</h3>
                 {% if student.has_allocated %}
-                <p>You have chosen {{ room }}.</p>
-                <a href="room/{{ room.room_id }}" class="btn btn-primary">View Room</a>
+                    <p>You have chosen {{ room }}.</p>
+                    <a href="room/{{ room.room_id }}" class="btn btn-primary">View Room</a>
                 {% else %}
                     {% if can_pick %}
                         <p>It's time to pick your room.</p>
                     {% else %}
                         <p>You can't pick your room quite yet.</p>
                     {% endif %}
-                <a href="staircases" class="btn btn-primary">Browse Rooms</a>
+                    <a href="staircases" class="btn btn-primary">Browse Rooms</a>
                 {% endif %}
             </div>
         </div>
@@ -86,19 +110,20 @@
                 {% if student.in_ballot %}
                     {% if student.accepted_syndicate %}
                         {% if not student.syndicate.complete %}
-                        <p>Great news! You've accepted your syndicate. We're still waiting on other people to accept.</p>
-                        <a href="dashboard/syndicate" class="btn btn-primary">View Syndicate</a>
+                            <p>Great news! You've accepted your syndicate. We're still waiting on other people to
+                                accept.</p>
+                            <a href="dashboard/syndicate" class="btn btn-primary">View Syndicate</a>
                         {% else %}
-                        <p>Great news! Your syndicate is complete.</p>
-                        <a href="dashboard/syndicate" class="btn btn-primary">View Syndicate</a>
+                            <p>Great news! Your syndicate is complete.</p>
+                            <a href="dashboard/syndicate" class="btn btn-primary">View Syndicate</a>
                         {% endif %}
                     {% else %}
-                        {% if student.syndicate == None and student.year == 1%}
-                        <p>You haven't created, or been invited to, a syndicate yet.</p>
-                        <a href="dashboard/create-syndicate" class="btn btn-primary">Create Syndicate</a>
+                        {% if student.syndicate == None and student.year == 1 %}
+                            <p>You haven't created, or been invited to, a syndicate yet.</p>
+                            <a href="dashboard/create-syndicate" class="btn btn-primary">Create Syndicate</a>
                         {% elif student.syndicate != None and student.year == 1 %}
-                        <p>You've been invited to a syndicate. Accept the invite now!</p>
-                        <a href="dashboard/syndicate" class="btn btn-primary">Accept Invite</a>
+                            <p>You've been invited to a syndicate. Accept the invite now!</p>
+                            <a href="dashboard/syndicate" class="btn btn-primary">Accept Invite</a>
                         {% endif %}
                     {% endif %}
                 {% else %}
@@ -112,12 +137,12 @@
                 <h3>Ballot Rank</h3>
                 {% if student.in_ballot %}
                     {% if student.rank == None %}
-                    <p>Your ranking hasn't been generated yet. Check back soon!</p>
-                    <a href="ranking" class="btn btn-primary">View Ranking</a>
+                        <p>Your ranking hasn't been generated yet. Check back soon!</p>
+                        <a href="ranking" class="btn btn-primary">View Ranking</a>
                     {% else %}
-                    <p>You are ranked <b>{{ student.rank }} out of all students.</b><br>
-                    You'll pick your room on {{ student.picks_at }}</p>
-                    <a href="ranking" class="btn btn-primary">View Ranking</a>
+                        <p>You are ranked <b>{{ student.rank }} out of all students.</b><br>
+                            You'll pick your room on {{ student.picks_at }}</p>
+                        <a href="ranking" class="btn btn-primary">View Ranking</a>
                     {% endif %}
                 {% else %}
                     <p>You've been removed from the ballot.</p>
@@ -127,6 +152,16 @@
     </div>
 
 </div>
+
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
+        integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+        crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"
+        integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T"
+        crossorigin="anonymous"></script>
 
 </body>
 </html>
