--- a/rooms/roomballot/templates/roomballot/student-detail.html
+++ b/rooms/roomballot/templates/roomballot/student-detail.html
@@ -24,15 +24,38 @@
              style="padding-right: 10px">
         Room Balloting System
     </a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent">
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
 
     <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
-        <ul class="nav navbar-nav">
-            <li class="mr-sm-2"><a class="nav-link" href="/roomballot/dashboard">Dashboard</a></li>
+        <ul class="navbar-nav">
+            <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle d-none d-lg-block" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
+                   aria-haspopup="true" aria-expanded="false">
+                    {{ student }}
+                </a>
+                <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
+                    <a class="dropdown-item" href="/roomballot/dashboard">Dashboard</a>
+                    <a class="dropdown-item" href="/roomballot/staircases">Browse Rooms</a>
+                    <div class="dropdown-divider"></div>
+                    <a class="dropdown-item" href="/accounts/logout">Logout</a>
+                </div>
+                <li class="nav-item">
+                    <a class="nav-link d-lg-none d-xl-none" href="/roomballot/dashboard">Dashboard</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link d-lg-none d-xl-none" href="/roomballot/staircases">Browse Rooms</a>
+                </li>
+                <div class="dropdown-divider-burgundy"></div>
+                <li class="nav-item">
+                    <a class="nav-link d-lg-none d-xl-none" href="/accounts/logout">Logout</a>
+                </li>
+            </li>
         </ul>
     </div>
+
 </nav>
 
 <div class="container">
