--- a/rooms/roomballot/templates/roomballot/syndicate-view.html
+++ b/rooms/roomballot/templates/roomballot/syndicate-view.html
@@ -86,13 +86,35 @@
              style="padding-right: 10px">
         Room Balloting System
     </a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent">
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
 
     <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
-        <ul class="nav navbar-nav">
-            <li class="mr-sm-2"><a class="nav-link" href="/roomballot/dashboard">Dashboard</a></li>
+        <ul class="navbar-nav">
+            <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle d-none d-lg-block" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
+                   aria-haspopup="true" aria-expanded="false">
+                    {{ student }}
+                </a>
+                <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
+                    <a class="dropdown-item" href="/roomballot/dashboard">Dashboard</a>
+                    <a class="dropdown-item" href="/roomballot/staircases">Browse Rooms</a>
+                    <div class="dropdown-divider"></div>
+                    <a class="dropdown-item" href="/accounts/logout">Logout</a>
+                </div>
+                <li class="nav-item">
+                    <a class="nav-link d-lg-none d-xl-none" href="/roomballot/dashboard">Dashboard</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link d-lg-none d-xl-none" href="/roomballot/staircases">Browse Rooms</a>
+                </li>
+                <div class="dropdown-divider-burgundy"></div>
+                <li class="nav-item">
+                    <a class="nav-link d-lg-none d-xl-none" href="/accounts/logout">Logout</a>
+                </li>
+            </li>
         </ul>
     </div>
 
@@ -168,6 +190,16 @@
     </div>
 
 </div>
+
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
+        integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+        crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"
+        integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T"
+        crossorigin="anonymous"></script>
 
 </body>
 </html>
