Info page more intuitive, bugfixing

--- a/rooms/roomballot/templates/roomballot/dashboard-student.html
+++ b/rooms/roomballot/templates/roomballot/dashboard-student.html
@@ -149,6 +149,15 @@
                 {% endif %}
             </div>
         </div>
+
+        <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+            <div class="jumbotron">
+                <h3>Support</h3>
+                    <p>Have some questions about the ballot process?</p>
+                    <a href="/roomballot/info" class="btn btn-primary">Knowledge Base</a>
+
+            </div>
+        </div>
     </div>
 
 </div>
