--- a/rooms/roomballot/static/css/bootstrap.css
+++ b/rooms/roomballot/static/css/bootstrap.css
@@ -2907,12 +2907,12 @@ fieldset:disabled a.btn {
 
 .btn-link {
   font-weight: 400;
-  color: #007bff;
+  color: #960066;
   background-color: transparent;
 }
 
 .btn-link:hover {
-  color: #0056b3;
+  color: #58003d;
   text-decoration: underline;
   background-color: transparent;
   border-color: transparent;
@@ -4651,14 +4651,14 @@ input[type="button"].btn-block {
   padding: 0.5rem 0.75rem;
   margin-left: -1px;
   line-height: 1.25;
-  color: #007bff;
+  color: #960066;
   background-color: #fff;
   border: 1px solid #dee2e6;
 }
 
 .page-link:hover {
   z-index: 2;
-  color: #0056b3;
+  color: #60003e;
   text-decoration: none;
   background-color: #e9ecef;
   border-color: #dee2e6;
