--- a/rooms/roomballot/templates/roomballot/info.html
+++ b/rooms/roomballot/templates/roomballot/info.html
@@ -17,19 +17,19 @@
 
     <!--Start of Tawk.to Script-->
     <script type="text/javascript">
-    var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
-    Tawk_API.visitor = {
-        name : '{{ student.first_name }} ({{ request.user.username }})',
-        email : '{{ request.user.email }}'
+        var Tawk_API = Tawk_API || {}, Tawk_LoadStart = new Date();
+        Tawk_API.visitor = {
+            name: '{{ student.first_name }} ({{ request.user.username }})',
+            email: '{{ request.user.email }}'
         };
-    (function(){
-        var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
-        s1.async=true;
-        s1.src='https://embed.tawk.to/5b44b4b76d961556373d93d4/default';
-        s1.charset='UTF-8';
-        s1.setAttribute('crossorigin','*');
-        s0.parentNode.insertBefore(s1,s0);
-    })();
+        (function () {
+            var s1 = document.createElement("script"), s0 = document.getElementsByTagName("script")[0];
+            s1.async = true;
+            s1.src = 'https://embed.tawk.to/5b44b4b76d961556373d93d4/default';
+            s1.charset = 'UTF-8';
+            s1.setAttribute('crossorigin', '*');
+            s0.parentNode.insertBefore(s1, s0);
+        })();
     </script>
     <!--End of Tawk.to Script-->
 </head>
@@ -50,7 +50,8 @@
     <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
         <ul class="navbar-nav">
             <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle d-none d-lg-block" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
+                <a class="nav-link dropdown-toggle d-none d-lg-block" href="#" id="navbarDropdown" role="button"
+                   data-toggle="dropdown"
                    aria-haspopup="true" aria-expanded="false">
                     {{ student }}
                 </a>
@@ -60,16 +61,16 @@
                     <div class="dropdown-divider"></div>
                     <a class="dropdown-item" href="/accounts/logout">Logout</a>
                 </div>
-                <li class="nav-item">
-                    <a class="nav-link d-lg-none d-xl-none" href="/roomballot/dashboard">Dashboard</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link d-lg-none d-xl-none" href="/roomballot/staircases">Browse Rooms</a>
-                </li>
-                <div class="dropdown-divider-burgundy"></div>
-                <li class="nav-item">
-                    <a class="nav-link d-lg-none d-xl-none" href="/accounts/logout">Logout</a>
-                </li>
+            <li class="nav-item">
+                <a class="nav-link d-lg-none d-xl-none" href="/roomballot/dashboard">Dashboard</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link d-lg-none d-xl-none" href="/roomballot/staircases">Browse Rooms</a>
+            </li>
+            <div class="dropdown-divider-burgundy"></div>
+            <li class="nav-item">
+                <a class="nav-link d-lg-none d-xl-none" href="/accounts/logout">Logout</a>
+            </li>
             </li>
         </ul>
     </div>
@@ -78,66 +79,155 @@
 
 <div class="container">
 
-    <div class="border-bottom mb-3">
-        <h2>Ballot Information</h2>
-    </div>
-    <div class="row">
-        <div class="col-lg-9 col-md-12 col-sm-12 col-xs-12">
-            <p>
-                The ballot will be held on the weekend of {{ date }}. Second years will pick on the Saturday,
-                and first years will pick on the Sunday. Balloting will begin at 9am, and you'll be allocated
-                a 5-minute slot in which to pick your room.
-            </p>
+    <div class="row mt-4">
 
-            <div class="jumbotron">
-                <h4 class="mb-3">Frequently Asked Questions</h4>
-                <b>1. What is the room ballot?</b><br>
-                The room ballot is an ordered list of first and second year students - where your position in the ballot
-                reflects the order in which you will choose a room on ballot weekend. The ballot occurs over two days,
-                in which second years take priority and choose first, followed by the freshers. Within your half of the
-                ballot, your position is randomly determined (there's no priority for scholars etc). When you ballot
-                again in your second year, the order of your year will be reversed. So if you were at the bottom of the
-                ballot in first year, you will be at the very top in second year.<br><br>
-
-                <b>2. Do I need to be on the room ballot to get a room in college?</b><br>
-                Not necessarily. A set of rooms is reserved out of the ballot and can be applied for via the Tutorial
-                & Admissions Office by students with exceptional requirements - these tend to be upon referral from the
-                DRC or with medical evidence. I am under the impression that all students who come under this remit
-                have been contacted by T&A. If you have not been contacted but feel you should have, please email the
-                college academic registrar, Sarah Pickard (sjp54@cam.ac.uk).<br><br>
-
-                <b>3. What is a syndicate?</b><br>
-                You can feature on the ballot in two ways: either a individual or as part of a syndicate. A syndicate
-                is a way for a group of people (Maximum 6 people) can choose rooms at the same time as each other. If
-                you want to live with a certain group of people next year, being in a syndicate with them is a way to
-                make that more likely because you can easily coordinate what you pick when it's your turn on ballot
-                weekend. Being in a syndicate does not mean that you have to live with the people in it - it merely
-                makes the option of living with them easier.<br><br>
-
-                <b>4. How do I form a syndicate?</b><br>
-                Talk to your friends. It is actually quite a big decision so do give it some serious thought, but
-                remember that it's also fine to not be in a syndicate. When you're ready, log on to the Balloting
-                System to form your syndicates. Only freshers need to form syndicates, and you will have until
-                {{ date }} to complete this.<br><br>
-
-                <b>5. Do I have to live in college?</b><br>
-                No. You are entitled to drop of the room ballot if you so wish and look for out of college
-                accommodation. However if you change your mind there is no guarantee that college will be able
-                to provide accommodation to you.
+        <div class="col-md-3 col-sm-12 mb-5 d-md-block sidebar">
+            <div class="list-group">
+                <a href="/roomballot/info" class="list-group-item active"><i class="fa fa-key"></i> <span>Ballot Information</span></a>
+                <a href="#" class="list-group-item"><i class="fa fa-credit-card"></i> <span>Bursaries & Rent Reduction</span></a>
+                <a href="#" class="list-group-item"><i class="fa fa-question-circle"></i><span>About</span></a>
             </div>
         </div>
-    </div>
-</div>
+        <main role="main" class="col md-9 ml-sm-auto col-lg-9 px-4">
+            <div class="row">
+                <div>
+                    <h2>Ballot Information</h2>
+                </div>
+                <div class="border-top">
+                    <p class="mt-3">
+                        The ballot will be held on the weekend of {{ date }}. Second years will pick on the Saturday,
+                        and first years will pick on the Sunday. Balloting will begin at 9am, and you'll be allocated
+                        a 5-minute slot in which to pick your room.
+                    </p>
 
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-        crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
-        integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
-        crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"
-        integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T"
-        crossorigin="anonymous"></script>
+                    <div id="accordion">
+                        <div class="card">
+                            <div class="card-header" id="headingOne">
+                                <h5 class="mb-0">
+                                    <button class="btn btn-link" data-toggle="collapse" data-target="#collapseOne">
+                                        What is the room ballot?
+                                    </button>
+                                </h5>
+                            </div>
+
+                            <div id="collapseOne" class="collapse show" data-parent="#accordion">
+                                <div class="card-body">
+                                    The room ballot is an ordered list of first and second year students - where your
+                                    position in the ballot
+                                    reflects the order in which you will choose a room on ballot weekend. The ballot
+                                    occurs over two days,
+                                    in which second years take priority and choose first, followed by the freshers.
+                                    Within your half of the
+                                    ballot, your position is randomly determined (there's no priority for scholars etc).
+                                    When you ballot
+                                    again in your second year, the order of your year will be reversed. So if you were
+                                    at the bottom of the
+                                    ballot in first year, you will be at the very top in second year.
+                                </div>
+                            </div>
+                        </div>
+                        <div class="card">
+                            <div class="card-header" id="headingTwo">
+                                <h5 class="mb-0">
+                                    <button class="btn btn-link collapsed" data-toggle="collapse"
+                                            data-target="#collapseTwo">
+                                        Do I need to be on the room ballot to get a room in college?
+                                    </button>
+                                </h5>
+                            </div>
+                            <div id="collapseTwo" class="collapse" data-parent="#accordion">
+                                <div class="card-body">
+                                    Not necessarily. A set of rooms is reserved out of the ballot and can be applied for
+                                    via the Tutorial
+                                    & Admissions Office by students with exceptional requirements - these tend to be
+                                    upon referral from the
+                                    DRC or with medical evidence. All students who come under this remit should
+                                    have been contacted by T&A. If you have not been contacted but feel you should have,
+                                    please email the
+                                    college academic registrar, Sarah Pickard (<a href="mailto:sjp54@cam.ac.uk">sjp54@cam.ac.uk</a>).
+                                </div>
+                            </div>
+                        </div>
+                        <div class="card">
+                            <div class="card-header" id="headingThree">
+                                <h5 class="mb-0">
+                                    <button class="btn btn-link collapsed" data-toggle="collapse"
+                                            data-target="#collapseThree">
+                                        What is a syndicate?
+                                    </button>
+                                </h5>
+                            </div>
+                            <div id="collapseThree" class="collapse" data-parent="#accordion">
+                                <div class="card-body">
+                                    You can feature on the ballot in two ways: either a individual or as part of a
+                                    syndicate. A syndicate
+                                    is a way for a group of people (Maximum 6 people) can choose rooms at the same time
+                                    as each other. If
+                                    you want to live with a certain group of people next year, being in a syndicate with
+                                    them is a way to
+                                    make that more likely because you can easily coordinate what you pick when it's your
+                                    turn on ballot
+                                    weekend. Being in a syndicate does not mean that you have to live with the people in
+                                    it - it merely
+                                    makes the option of living with them easier.
+                                </div>
+                            </div>
+                        </div>
+                        <div class="card">
+                            <div class="card-header" id="headingFour">
+                                <h5 class="mb-0">
+                                    <button class="btn btn-link collapsed" data-toggle="collapse"
+                                            data-target="#collapseFour">
+                                        How do I form a syndicate?
+                                    </button>
+                                </h5>
+                            </div>
+                            <div id="collapseFour" class="collapse" data-parent="#accordion">
+                                <div class="card-body">
+                                    Talk to your friends. It is actually quite a big decision so do give it some serious
+                                    thought, but
+                                    remember that it's also fine to not be in a syndicate. When you're ready, log on to
+                                    the Balloting
+                                    System to form your syndicates. Only freshers need to form syndicates, and you will
+                                    have until
+                                    {{ date }} to complete this.
+                                </div>
+                            </div>
+                        </div>
+                        <div class="card">
+                            <div class="card-header" id="headingFive">
+                                <h5 class="mb-0">
+                                    <button class="btn btn-link collapsed" data-toggle="collapse"
+                                            data-target="#collapseFive">
+                                        Do I have to live in college?
+                                    </button>
+                                </h5>
+                            </div>
+                            <div id="collapseFive" class="collapse" data-parent="#accordion">
+                                <div class="card-body">
+                                    No. You are entitled to drop of the room ballot if you so wish and look for out of
+                                    college
+                                    accommodation. However if you change your mind there is no guarantee that college
+                                    will be able
+                                    to provide accommodation to you.
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+    </div>
+
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+            integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+            crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
+            integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+            crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"
+            integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T"
+            crossorigin="anonymous"></script>
 
 </body>
 </html>
